--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 asgiref==3.4.1
 Django==3.2.7
+djangorestframework==3.12.4
+djongo==1.3.6
+dnspython==1.16.0
+environs==9.3.3
+marshmallow==3.13.0
+pymongo==3.12.0
+python-dotenv==0.19.0
 pytz==2021.1
-sqlparse==0.4.2
+sqlparse==0.2.4
